2000-12-09  Per Bothner  <per@bothner.com>

	* lists.scm:  Add return type specifiers.
	* syntax.scm (error):  Move from here ...
	* misc.scm (error):  ... to here to solve soem order dependencies.

2000-10-13  Per Bothner  <per@bothner.com>

	* misc.scm (make-procedure):  Replaced by kawa.standard.MakeProcedure.
	* syntax.scm (define-procedure):  Quote the name.
	* lists.scm, numbers.scm:  Make module static.
	* lists.scm (car, cdr):  New procedures.
	* emacs.scm:  Removed; subsumed by code in gnu/jemacs.
	* Makefile.am (java_SCM):  Make syntax.scm before lists.scm, since
	the latter uses define-procedure.

2000-10-12  Per Bothner  <per@bothner.com>

	* numbers.scm:  Add (new-style) type specificiers.
	Replace some ((primitive-virtual-method ...)) by (invoke ...).
	(floor, ceiling, truncate, round, arithmetic-shift):  New procedures.

2000-06-19  Per Bothner  <per@bothner.com>

	* characters.scm (char=?, char<?, char>?, char<=?, char>=?,
	char-ci=?, char-ci<?, char-ci>?, char-ci<=?, char-ci>=?):
	New procedures.

2000-06-18  Per Bothner  <per@bothner.com>

	* misc.scm (make-procedure):  Call make, not make$.

2000-06-09  Per Bothner  <per@bothner.com>

	* quantities.scm:  Removed, as define-unit now has its own class.
	* Makefile.am (java_SCM):  Update accordingly.

	* misc.scm (make-procedure):  New procedures.
	(procedure-property, set-procedure-property!):  New procedures.
	* syntax.scm (define-procedure):  New syntax.

2000-05-28  Per Bothner  <per@bothner.com>

	* trace.scm (%do-trace):  Fix typo.

	* Makefile.am (JAVACFLAGS):  Add --module-static flag.

	* trace.scm (%do-trace):  Incorrect primitive-static-method replaced
	by invoke-static.

2000-04-17  Per Bothner  <per@bothner.com>

	* strings.scm: Use invoke/invoke-static more.
	Generalize many procedures to work on <abstract-string>.

2000-04-13  Per Bothner  <per@bothner.com>

	* reflection.scm (record-type-name):  Use Scheme's demangleName.