@@ -31,3 +31,13 @@
 
 (define (length list :: <list>) :: <int>
   (invoke-static <list> 'length list))
+
+(define (reverse (list :: <list>)) :: <list>
+  (let loop ((arg list) (result '()))
+    (if (null? arg) result
+	(let ((pair :: <pair> arg))
+	  (loop (cdr pair) (cons (car pair) result))))))
+
+;; Not in R5RS, but is in Guile (with extra mystery argument).
+(define (reverse! (list :: <list>)) :: <list>
+  (invoke-static <list> 'reverseInPlace list))
